@@ -2,7 +2,9 @@
 	* actors.cc: Fixed resurrection bug -- using (e.g.) Death Bolt
 	  resulted in a body which would not be resurrected, unlike what
 	  happened in the original.
-
+	* gamedat.cc: Fixed errors on restoring from multimap savegame
+	  or initgame.
+	
 2006-01-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* usecode/intrinsics.cc: Virtue stones should use the map number
 	  they are in, not of the map being displayed.
